change logs from talend


1. from https://github.com/Talend/tdq-studio-se/commits/master/main/plugins/net.sourceforge.sqlexplorer
======================================
2014-11-26 qiongli bug TDQ-9533 Need to put a limit or limit by default the preview of tables in DQ respository
append "limit x" in sql query for vertica database.
------------------------------------------------------------------------------------------------------------- 

2014-11-25 qiongli bug TDQ-9756:Studio switch workspace failed cause of early loading of cwm.management bundle
delete 2 consumers xml(sqlexplore.xml and mapdb.xml),replace it with java code.
--------------------------------------------------------------------------------------------------------------

2014-11-7 qiongli bug TDQ-9692:The "Connections" view opens up when I do "Data Preview" on a table
Only open the connections view when the current perspective is SQLExplorer perspective.
---------------------------------------------------------------------------------------------------------------

Commits on Oct 16, 2014

    zshen-talend

    fixed bug TDQ-9498 unify compile enviroment on the tdq-stdio-se
    zshen-talend authored a day ago

Commits on Sep 30, 2014

    Liu Xinquan

    TDQ-9492 "view keys" and "view index" function in overview anlaysis g… …
    xqliu-talend authored 17 days ago

Commits on Sep 29, 2014

    Liu Xinquan

    TDQ-9492 "view keys" and "view index" function in overview anlaysis g… …
    xqliu-talend authored 18 days ago

Commits on Sep 28, 2014

    zshen-talend

    TDQ-9504 when analysis is java engine, job with tDqReportRun can not run …
    zshen-talend authored 19 days ago

Commits on Sep 25, 2014

    Liu Xinquan

    TDQ-9378 Make TOS DQ compatible with Apache license …
    xqliu-talend authored 22 days ago
    Liu Xinquan

    TDQ-9378 Make TOS DQ compatible with Apache license …
    xqliu-talend authored 22 days ago

Commits on Sep 24, 2014

    msjian
